--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.table {
+  table-layout: fixed;
+  width: 70%;
+  border-collapse: collapse;
+  border: 3px solid #cdb4dbc6;
+  margin-left: 140px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  font-family: 'Kanit', sans-serif;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  &__thead > th {
+    padding: 20px;
+    background-color: #cdb4dbd8;
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  &__thead th:nth-child(1) {
+    width: 15%;
+  }
+
+  &__thead th:nth-child(2) {
+    width: 15%;
+  }
+  
+  &__thead th:nth-child(3) {
+    width: 25%;
+  }
+  
+  &__thead th:nth-child(4) {
+    width: 15%;
+  }
+
+  &__tr > td {
+    padding: 20px;
+  }
+
+  &__tbody {
+    text-align: center;
+  }
+
+  &__tbody > tr:nth-child(odd) {
+    background-color: #ffafccd8;
+  }
+
+  &__tbody > tr:nth-child(even) {
+    background-color: #bde0fe9b;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
+  font-size: 26px;
+  font-family: 'Kanit', sans-serif;
+  padding: 50px;
+}
+
+.searchForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
+  margin-right: 50px;
+  font-family: 'Kanit', sans-serif;
+  font-size: 18px;
+  gap: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.addForm {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 50px;
+  font-family: 'Kanit', sans-serif;
+  font-size: 18px;
+  gap: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titleAdd {
+  font-family: 'Kanit', sans-serif;
+  font-size: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+.addButton {
+  background-color:#cdb4db;
+  font-family: 'Kanit', sans-serif;
+  border-style: none;
+  padding: 10px;
 }
