--- a/src/styles/core/reset.scss
+++ b/src/styles/core/reset.scss
@@ -24,6 +24,8 @@ time, mark, audio, video {
     vertical-align: baseline;
     list-style: none;
     box-sizing: border-box;
+    text-decoration: none;
+    color: black;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
